--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.10",
-    "@heroicons/react": "^2.0.13",
+    "@headlessui/react": "^1.7.11",
+    "@heroicons/react": "^2.0.15",
     "@next/font": "13.1.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.4.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "js-cookie": "^3.0.1",
     "next": "13.1.1",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
@@ -25,6 +26,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
